--- a/.github/workflows/build-and-upload-binaries.yaml
+++ b/.github/workflows/build-and-upload-binaries.yaml
@@ -206,6 +206,7 @@ jobs:
               -DCMAKE_BUILD_TYPE=Release \
               -DLANELET2_INSTALL_DIR="$GITHUB_WORKSPACE/lanelet2/install" \
               -DAUTOWARE_LANELET2_EXTENSION_INSTALL_DIR="$GITHUB_WORKSPACE/autoware_lanelet2_extension/autoware_lanelet2_extension/install"
+          tree $GITHUB_WORKSPACE/autoware_lanelet2_extension_python_ws/install/lib/
           cd ..
           
       - name: Build validator
@@ -269,7 +270,13 @@ jobs:
           cp "${{ steps.build_gui.outputs.gui_artifact }}" release_package/
           cp -r autoware_lanelet2_map_validator/config release_package/
           cp -r autoware_lanelet2_map_validator/map_requirements release_package/
-          cp -r autoware_lanelet2_extension_python_ws/install/lib/python3.10/site-packages/autoware_lanelet2_extension_python release_package/
+          EXT_PY_MODULE_PATH="autoware_lanelet2_extension_python_ws/install/lib/python3.10/site-packages/autoware_lanelet2_extension_python"
+          if [ -d "$EXT_PY_MODULE_PATH" ]; then
+            echo "Including autoware_lanelet2_extension_python from $EXT_PY_MODULE_PATH"
+            cp -r "$EXT_PY_MODULE_PATH" release_package/
+          else
+            echo "Warning: $EXT_PY_MODULE_PATH not found, skipping"
+          fi
           strip release_package/autoware_lanelet2_map_validator || true
           zip -r $ZIP_NAME release_package
           echo "zip_name=$ZIP_NAME" >> $GITHUB_OUTPUT
