ci: update path for lanelet2_extension_python installation in build workflow

--- a/.github/workflows/build-and-upload-binaries.yaml
+++ b/.github/workflows/build-and-upload-binaries.yaml
@@ -206,7 +206,7 @@ jobs:
               -DCMAKE_BUILD_TYPE=Release \
               -DLANELET2_INSTALL_DIR="$GITHUB_WORKSPACE/lanelet2/install" \
               -DAUTOWARE_LANELET2_EXTENSION_INSTALL_DIR="$GITHUB_WORKSPACE/autoware_lanelet2_extension/autoware_lanelet2_extension/install"
-          tree $GITHUB_WORKSPACE/autoware_lanelet2_extension_python_ws/install/lib/
+          tree install/
           cd ..
           
       - name: Build validator
