--- a/.github/workflows/build-and-upload-binaries.yaml
+++ b/.github/workflows/build-and-upload-binaries.yaml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          # ref: ${{ steps.get_version.outputs.version }}
+          ref: ${{ steps.get_version.outputs.version }}
 
       - name: Cherry-pick preparation
         run: |
@@ -60,18 +60,18 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git fetch origin main static_build_helper
 
-      # - name: cherry-pick for version <= 1.5.2
-      #   if: steps.get_version.outputs.category == 'before_or_equal_1_5_2'
-      #   run: |
-      #     git cherry-pick b92492bb2232f0c1d502cfc0c6aede2f3169116b
-      #     git cherry-pick 8ed41f2f8d59d63c09bb47ac8ad59d4f56c7d07c
-      #     git cherry-pick 36c5e266dbf2bba0df39a7f789615fa4a2ecb8c3
-      #     git cherry-pick c15da63bd1b11d0de0ed4ab0f9693ebaf0fdddc0
+      - name: cherry-pick for version <= 1.5.2
+        if: steps.get_version.outputs.category == 'before_or_equal_1_5_2'
+        run: |
+          git cherry-pick b92492bb2232f0c1d502cfc0c6aede2f3169116b
+          git cherry-pick 8ed41f2f8d59d63c09bb47ac8ad59d4f56c7d07c
+          git cherry-pick 36c5e266dbf2bba0df39a7f789615fa4a2ecb8c3
+          git cherry-pick c15da63bd1b11d0de0ed4ab0f9693ebaf0fdddc0
 
-      # - name: cherry-pick for version > 1.5.2
-      #   if: steps.get_version.outputs.category == 'after_1_5_2'
-      #   run: |
-      #     git cherry-pick c15da63bd1b11d0de0ed4ab0f9693ebaf0fdddc0
+      - name: cherry-pick for version > 1.5.2
+        if: steps.get_version.outputs.category == 'after_1_5_2'
+        run: |
+          git cherry-pick c15da63bd1b11d0de0ed4ab0f9693ebaf0fdddc0
 
       - name: Install Dependencies
         run: |
@@ -215,34 +215,6 @@ jobs:
           ls -l $BIN
           echo "artifact=$(realpath $BIN)" >> $GITHUB_OUTPUT
 
-      - name: Build validator GUI
-        id: build_gui
-        run: |
-          set -e
-          source /opt/ros/humble/setup.bash
-          export LANELET2_INSTALL_DIR="$GITHUB_WORKSPACE/lanelet2/install"
-          export AUTOWARE_LANELET2_EXTENSION_PATH="$GITHUB_WORKSPACE/autoware_lanelet2_extension/"
-          export PYTHONPATH="$GITHUB_WORKSPACE/autoware_lanelet2_extension_python_ws/install/lib/python3.10/site-packages:$PYTHONPATH"
-
-          cd autoware_lanelet2_map_validator/gui
-
-          python3 -m pip install --upgrade pip
-          python3 -m pip install -r requirements.txt
-          python3 -m pip install pyinstaller
-          SPEC_FILE=map_validator_gui.spec
-
-          pyinstaller "$SPEC_FILE"
-
-          GUI_BIN=dist/map_validator_gui
-          if [ ! -f "$GUI_BIN" ]; then
-            GUI_BIN=$(find dist -maxdepth 2 -type f -executable | head -n 1)
-          fi
-          ls -l "$GUI_BIN"
-          if [ -n "$GUI_BIN" ]; then
-            echo "gui_artifact=$(realpath $GUI_BIN)" >> $GITHUB_OUTPUT
-          fi
-          cd ../..
-
       - name: Package artifacts
         id: package
         run: |
@@ -250,36 +222,8 @@ jobs:
           ZIP_NAME="autoware_lanelet2_map_validator-${VERSION}-linux-x86_64.zip"
           mkdir release_package
           cp "${{ steps.build_validator.outputs.artifact }}" release_package/
-          cp "${{ steps.build_gui.outputs.gui_artifact }}" release_package/
           cp -r autoware_lanelet2_map_validator/config release_package/
           cp -r autoware_lanelet2_map_validator/map_requirements release_package/
-          
-          CANDIDATE_PATHS=(
-            "autoware_lanelet2_extension_python_ws/install/local/lib/python3.10/dist-packages/autoware_lanelet2_extension_python"
-            "autoware_lanelet2_extension_python_ws/install/lib/python3.10/site-packages/autoware_lanelet2_extension_python"
-            "autoware_lanelet2_extension_python_ws/install/lib/python3.10/dist-packages/autoware_lanelet2_extension_python"
-            "autoware_lanelet2_extension_ws/install/local/lib/python3.10/dist-packages/autoware_lanelet2_extension_python"
-          )
-          FOUND_EXT_PY=""
-          for p in "${CANDIDATE_PATHS[@]}"; do
-            if [ -d "$p" ]; then
-              FOUND_EXT_PY="$p"
-              break
-            fi
-          done
-
-          if [ -n "$FOUND_EXT_PY" ]; then
-            echo "Including autoware_lanelet2_extension_python from $FOUND_EXT_PY"
-            cp -r "$FOUND_EXT_PY" release_package/ || echo "Warning: failed to copy $FOUND_EXT_PY"
-          else
-            echo "Warning: autoware_lanelet2_extension_python not found in known locations, skipping"
-          fi
-
-          SHARE_CAND="autoware_lanelet2_extension_python_ws/install/share/autoware_lanelet2_extension_python"
-          if [ -d "$SHARE_CAND" ]; then
-            cp -r "$SHARE_CAND" release_package/ || true
-          fi
-
           strip release_package/autoware_lanelet2_map_validator || true
           zip -r $ZIP_NAME release_package
           echo "zip_name=$ZIP_NAME" >> $GITHUB_OUTPUT
