fix unintended deletion
Signed-off-by: TaikiYamada4 <taiki.yamada@tier4.jp>

--- a/.github/workflows/build-and-upload-binaries.yaml
+++ b/.github/workflows/build-and-upload-binaries.yaml
@@ -156,6 +156,7 @@ jobs:
           make install
 
       - name: Build autoware_lanelet2_extension
+        run: |
           set -e
           source /opt/ros/humble/setup.bash
           git clone https://github.com/autowarefoundation/autoware_lanelet2_extension.git
