--- a/autoware_lanelet2_map_validator/config/params.yaml
+++ b/autoware_lanelet2_map_validator/config/params.yaml
@@ -6,6 +6,8 @@ mapping.lane.border_sharing:
   iou_threshold: 0.05
 mapping.traffic_light.regulatory_element_details:
   max_bounding_box_size: 40.0
+mapping.crosswalk.regulatory_element_details:
+  max_bounding_box_size: 40.0
 mapping.intersection.regulatory_element_details_for_virtual_traffic_lights:
   supported_refers_type: [intersection_coordination]
   max_bounding_box_size: 40.0
